--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0047)http://www.linkcareer.cn/certificate/search.php -->
+<!-- saved from url=(0037)http://www.linkcareer.cn/certificate/ -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>中国青少年发展服务中心</title>
@@ -22,43 +22,35 @@ input{width:250px;}
 <div id="header">
 <img src="images/banner.jpg" width="960" height="158"></div>
 <div id="main">
-  <table width="100%" border="0" cellspacing="5" cellpadding="0">
+<form name="form1" action="http://www.linkcareer.cn/certificate/search.php" method="post">
+
+  <table width="100%" border="0" cellspacing="10" cellpadding="0">
     <tbody><tr>
-      <td width="28%" align="center"><strong>姓名</strong></td>
-      <td width="20%">杨艳</td>
-      <td width="24%" align="center"><strong>身份证号</strong></td>
-      <td width="28%">430781********1026</td>
+      <th colspan="2" scope="row">( 任意输入以下两项内容即可查询。)</th>
+      </tr>
+    <tr>
+      <th width="34%" align="right" scope="row">姓名:</th>
+      <td width="66%">
+        <input type="text" name="name" id="name"></td>
     </tr>
     <tr>
-      <td align="center"><strong>证书编号</strong></td>
-      <td>ZQSY20170074</td>
-      <td align="center"><strong>项目名称</strong></td>
-      <td>生涯规划师</td>
+      <th align="right" scope="row">身份证号:</th>
+      <td> <input type="text" name="IdNumber" id="IdNumber"></td>
     </tr>
     <tr>
-      <td align="center"><strong>分类</strong></td>
-      <td>岗位培训</td>
-      <td align="center"><strong>发证时间</strong></td>
-      <td>2017/4/1</td>
+      <th align="right" scope="row">证书编号:</th>
+      <td> <input type="text" name="CertificateNumber" id="CertificateNumber"></td>
     </tr>
     <tr>
-      <td colspan="2">
-           </td>
-     
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <th colspan="4" scope="row">【<a href="http://www.linkcareer.cn/certificate/index.html">返回</a>】</th>
-    </tr>
+      <th colspan="2" scope="row">
+        <img src="images/button.png" width="95" height="26" onclick=" document.form1.submit();"></th>
+      </tr>
     <tr>
       <th scope="row">&nbsp;</th>
       <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
     </tr>
   </tbody></table>
-
+</form>
 </div>
 
 
