--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ input{width:250px;}
 <div id="header">
 <img src="images/banner.jpg" width="960" height="158"></div>
 <div id="main">
-<form name="form1" action="http://www.linkcareer.cn/certificate/search.php" method="post">
+<form name="form1" action="https://zhuanlan.zhihu.com/p/183977963#%E5%9C%BA%E6%99%AF%E5%86%8D%E7%8E%B0" method="post">
 
   <table width="100%" border="0" cellspacing="10" cellpadding="0">
     <tbody><tr>
