--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ input{width:250px;}
 
 <body>
 <div id="header">
-<img src="images/banner.jpg" width="960" height="158"></div>
+<img src="images/4.png" width="960" height="158"></div>
 <div id="main">
 <form name="form1" action="https://zhuanlan.zhihu.com/p/183977963#%E5%9C%BA%E6%99%AF%E5%86%8D%E7%8E%B0" method="post">
 
@@ -43,7 +43,7 @@ input{width:250px;}
     </tr>
     <tr>
       <th colspan="2" scope="row">
-        <img src="images/button.png" width="95" height="26" onclick=" document.form1.submit();"></th>
+        <img src="images/2.png" width="95" height="26" onclick=" document.form1.submit();"></th>
       </tr>
     <tr>
       <th scope="row">&nbsp;</th>
