--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ var windowHeight = 500;
 var left = (screenWidth - windowWidth) / 2;
 var top = (screenHeight - windowHeight) / 2;
 
-var popupWindow = window.open('popup.html', '_blank', 'width=400, height=500, top=' + top + ', left=' + left + ', screenX=' + left + ', screenY=' + top);
+var popupWindow = window.open('search.html', '_blank', 'width=400, height=500, top=' + top + ', left=' + left + ', screenX=' + left + ', screenY=' + top);
 
     }
   }
