--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         var left = (screenWidth - windowWidth) / 2;
         var top = (screenHeight - windowHeight) / 2;
 
-        var popupWindow = window.open('popup.html', '_blank', 'width=' + windowWidth + ', height=' + windowHeight + ', top=' + top + ', left=' + left + ', screenX=' + left + ', screenY=' + top);
+        var popupWindow = window.open('search.html', '_blank', 'width=' + windowWidth + ', height=' + windowHeight + ', top=' + top + ', left=' + left + ', screenX=' + left + ', screenY=' + top);
       } else {
         alert("输入的信息不正确，请重新填写。");
       }
